# fackup

./: .gitignore  LICENSE  README.md  fackup.cabal
src/: Main.hs
