Name:                fackup
Version:             0.1
Synopsis:            Backup Tool for Flickr photos.
Description:         Downloads all your Flickr Photo Stream.
Homepage:            https://github.com/waldheinz/hackup
License:             BSD3
License-file:        LICENSE
Author:              Matthias Treydte
Maintainer:          waldheinz@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable fackup
   Main-is: src/Main.hs
   Build-depends:
      attoparsec     == 0.10.*,
      aeson          == 0.6.*,
      base           == 4.*,
      bytestring     == 0.9.*,
      directory      == 1.1.*,
      download-curl  == 0.1.*,
      filepath       == 1.2.*,
      hoauth         == 0.3.*,
      vector         == 0.9.*
